Develop (#15)
* - rename org -> com

* - support to clone in parallel

* - support to clone in parallel

* - support to clone in parallel

* - support to clone in parallel

* - deep copy javadoc

* - deep copy javadoc

* - Bound flyweight factory to enum type
- Use EnumMap inside flyweight Factory for performance

* - collect super fields

* - support for records: don't clone as immutable

* decompose project

* merge master

* - actualize README.md